# School-Projects

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .prettierrc  README.md  ruff.toml
ccdsalg/mco1/: CMakeLists.txt  CREDITS.md  README.md
ccdsalg/mco1/app/: CMakeLists.txt  main1.c  main2.c  utils.c  utils.h
ccdsalg/mco1/include/convex_hull/: geometry.h  graham_scan1.h  graham_scan2.h  sort.h  stack.h
ccdsalg/mco1/src/: CMakeLists.txt  geometry.c  graham_scan1.c  graham_scan2.c  sort.c  stack.c
ccdsalg/mco1/tests/: CMakeLists.txt  geometry_test.cpp  graham_scan.cpp  sort_test.cpp  stack_test.cpp
ccdstru/: README.md
ccdstru/src/main/java/cielsachen/ccdstru/: Board.java  Game.java  Main.java  Position.java
ccprog1/: CMakeLists.txt  README.md
ccprog1/app/: CMakeLists.txt  main.c
ccprog1/include/: console.h  prompts.h  text_graphics.h  trading.h  weather.h
ccprog1/include/tides_of_manila/: text_graphics.h
ccprog1/lib/: CMakeLists.txt  console.c  prompts.c  text_graphics.c  trading.c  weather.c
ccprog1/src/: CMakeLists.txt  console.c  console.h  main.c  prompts.c  prompts.h  text_graphics.c  trading.c  trading.h  weather.c  weather.h
ccprog2/: .clang-format  CMakeLists.txt  README.md
ccprog2/app/: CMakeLists.txt  main.c
ccprog2/include/: data_management.h  translation.h  utils.h
ccprog2/include/simple_translator/: translation.h  utils.h
ccprog2/lib/: CMakeLists.txt  data_management.c  translation.c  utils.c
ccprog2/src/: CMakeLists.txt  data_management.c  data_management.h  main.c  translation.c  utils.c
dlsu/ccdsalg/mco1/: CMakeLists.txt  README.md
dlsu/ccdsalg/mco1/include/convex_hull/: geometry.h  graham_scan1.h  graham_scan2.h  sort.h  stack.h
dlsu/ccdsalg/mco1/lib/: CMakeLists.txt  geometry.c  graham_scan1.c  graham_scan2.c  sort.c  stack.c
dlsu/ccdsalg/mco1/samples/: circle-input.txt  simple-input.txt  simple-output.txt
dlsu/ccdsalg/mco1/src/: CMakeLists.txt  io.c  io.h  main1.c  main2.c
dlsu/ccdsalg/mco2/: CMakeLists.txt  README.md
dlsu/ccdsalg/mco2/include/social_network/: graph.h  queue.h  traversal.h
dlsu/ccdsalg/mco2/lib/: CMakeLists.txt  graph.c  queue.c  traversal.c
dlsu/ccdsalg/mco2/samples/: G-BFS.txt  G-DFS.txt  G-MATRIX.txt  G-SET.txt  G.txt  H.txt
dlsu/ccdsalg/mco2/src/: CMakeLists.txt  bonus.c  io.c  io.h  main.c
dlsu/ccdstru/: CREDITS.md  README.md  pom.xml
dlsu/ccdstru/src/main/java/cielsachen/tictactoe/: Board.java  Game.java  Main.java  Position.java
dlsu/ccprog1/: .clang-format  CMakeLists.txt  README.md
dlsu/ccprog1/src/: CMakeLists.txt  console.c  console.h  main.c  prompts.c  prompts.h  text_graphics.c  text_graphics.h  trading.c  trading.h  weather.c  weather.h
dlsu/ccprog2/: .clang-format  CMakeLists.txt  README.md
dlsu/ccprog2/src/: CMakeLists.txt  data_management.c  data_management.h  io.c  io.h  main.c  translation.c  translation.h
dlsu/ccprog3/: CREDITS.md  README.md  pom.xml
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/: Main.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/controller/: CoffeeController.java  MenuController.java  TransactionController.java  TruckController.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/exception/: InsufficientCapacityException.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/helper/: ExceptionMessage.java  Input.java  PrintColor.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/model/: Ingredient.java  Product.java  StorageBin.java  Transaction.java  Truck.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/model/coffee/: Coffee.java  CoffeeSize.java  EspressoRatio.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/service/: CoffeeService.java  StorageBinService.java  TransactionService.java  TruckService.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco1/util/: Output.java  UnitConversion.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/: Main.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/controller/: CoffeeController.java  MenuController.java  TruckController.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/exception/: InsufficientCapacityException.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/model/: Ingredient.java  Product.java  StorageBin.java  Transaction.java  Truck.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/model/coffee/: Coffee.java  CoffeeSize.java  EspressoRatio.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/service/: CoffeeService.java  StorageBinService.java  TransactionService.java  TruckService.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/util/: UnitConversion.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/validator/: FloatDocumentFilter.java  IntegerDocumentFilter.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/view/: BrewCompletionView.java  DashboardView.java  MainMenuView.java  SimulationMenuView.java  StorageBinRestockingMenuView.java  TruckView.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/view/component/: CoffeePricesTable.java  IngredientsTable.java  Modal.java  TableSize.java  package-info.java
dlsu/ccprog3/src/main/java/cielsachen/javajeeps/mco2/view/form/: IngredientSelectionForm.java  PriceConfigurationForm.java  StorageBinAssignmentForm.java  TruckCreationForm.java  package-info.java
dlsz/emtech/: .gitignore  main.py  pyproject.toml
dlsz/emtech/docs/: README.md
emtech/: CREDITS.md  main.py  pyproject.toml
emtech/chemtechcodex/: main.py
emtech/docs/: README.md
